--- a/.github/workflows/e2e-selenium.yml
+++ b/.github/workflows/e2e-selenium.yml
@@ -7,23 +7,40 @@ on:
 jobs:
   e2e:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Clona el repo
       - uses: actions/checkout@v4
 
+      # 2️⃣ Configura PNPM
       - uses: pnpm/action-setup@v4
         with:
           version: 9
 
+      # 3️⃣ Configura Node
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
+      # 4️⃣ Instala dependencias
       - name: Install deps
         run: pnpm install --no-frozen-lockfile
 
+      # 5️⃣ Instala Google Chrome (última versión estable)
       - uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: latest
 
+      # 6️⃣ Debug opcional — muestra versiones reales en logs
+      - name: Debug versions
+        run: |
+          node -v
+          pnpm -v
+          google-chrome --version || true
+          npx chromedriver --version || true
+
+      # 7️⃣ Ejecuta las pruebas Selenium
       - name: Run Selenium tests (Prod)
         env:
           BASE_URL: https://prueba-finalmente.vercel.app
