--- a/.github/workflows/e2e-selenium.yml
+++ b/.github/workflows/e2e-selenium.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  TEST:  # ← cambia el nombre del job aquí
+  TEST:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,16 +26,16 @@ jobs:
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          chrome-version: latest
+          chrome-version: stable
 
       - name: Debug versions
         run: |
           node -v
           pnpm -v
           google-chrome --version || true
-          npx chromedriver --version || true
 
       - name: Run Selenium tests (Prod)
         env:
           BASE_URL: https://prueba-finalmente.vercel.app
+          WEBDRIVER_CHROME_DRIVER: ""   # evita que algo fuerce un chromedriver
         run: pnpm test:e2e
