--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "mocha tests/e2e/**/*.test.js --timeout 60000"
+    "test:e2e": "mocha --file tests/e2e/mocha.global.js tests/e2e/**/*.test.js --timeout 60000"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
@@ -25,7 +25,6 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@types/react-slick": "^0.23.13",
-    "chromedriver": "^140.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "mocha": "^10.7.0",
