--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +23,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "19.0.10",
+    "@types/react-bootstrap": "^1.1.0",
     "@types/react-dom": "19.0.4",
     "@types/react-slick": "^0.23.13",
     "eslint": "^9",
@@ -31,7 +32,7 @@
     "postcss": "^8",
     "selenium-webdriver": "^4.38.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "wait-on": "^7.2.0"
   },
   "pnpm": {
