--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "mocha --file tests/e2e/mocha.global.js tests/e2e/**/*.test.js --timeout 60000"
+    "test:e2e": "mocha tests/e2e/**/*.test.js --timeout 60000"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "next": "15.2.0",
     "react": "19.0.0",
     "react-bootstrap": "^2.10.10",
@@ -23,16 +25,16 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "19.0.10",
-    "@types/react-bootstrap": "^1.1.0",
     "@types/react-dom": "19.0.4",
     "@types/react-slick": "^0.23.13",
+    "chromedriver": "^140.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "mocha": "^10.7.0",
     "postcss": "^8",
-    "selenium-webdriver": "^4.38.0",
+    "selenium-webdriver": "^4.24.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3",
+    "typescript": "^5",
     "wait-on": "^7.2.0"
   },
   "pnpm": {
